--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "motion": "^12.23.24",
     "multer": "^2.0.2",
     "next": "15.5.4",
+    "nodemailer": "^7.0.10",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
